--- a/index.html
+++ b/index.html
@@ -5,30 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
+
   <title>Frontend Mentor | Blog preview card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
+  <main role="main">
+    <div class="container">
+      <div class="blog-page">
+        <img class="blog-image" src="assets/images/illustration-article.svg" alt="illustration-article">
+        <div class="metadata">
+          <span class="category">Learning</span>
+          <h4 class="publication-date">Published 21 Dec 2023</h4>
+        </div>
+        <h1 class="title">HTML & CSS foundations</h1>
+        <p class="description">These languages are the backbone of every website, 
+          defining structure, content, and presentation.</p>
+        <div class="author">
+          <img src="assets/images/image-avatar.webp" alt="Author Profile Image" class="author-image">
+          <span class="author-name">Greg Hooper</span>
+        </div>
+        
+      </div>
 
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Alex Ionita</a>.
+      </div>
+    </div>
+  </main>
 </body>
 </html>
