--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Alex Ionita</a>.
+        Coded by <a href="https://github.com/Alexandru736/blog-preview-card-main">Alex Ionita</a>.
       </div>
     </div>
   </main>
