--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <main role="main">
+  <main>
     <div class="container">
       <div class="blog-page">
         <img class="blog-image" src="assets/images/illustration-article.svg" alt="illustration-article">
@@ -30,14 +30,14 @@
           <img src="assets/images/image-avatar.webp" alt="Author Profile Image" class="author-image">
           <span class="author-name">Greg Hooper</span>
         </div>
-        
-      </div>
-
-      <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="https://github.com/Alexandru736/blog-preview-card-main">Alex Ionita</a>.
       </div>
     </div>
   </main>
+  <footer class="attribution">
+    <p>
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/Alexandru736/blog-preview-card-main">Alex Ionita</a>.
+    </p>
+  </footer>
 </body>
 </html>
